<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/pref_cat_engine">
        <ListPreference
            app:key="engine"
            app:title="@string/pref_engine_title"
            app:summary="%s"
            app:entries="@array/engine_entries"
            app:entryValues="@array/engine_values"
            app:defaultValue="local"/>
        <EditTextPreference
            app:key="language"
            app:title="@string/pref_language_title"
            app:summary="@string/pref_language_summary"
            app:defaultValue="auto"
            app:useSimpleSummaryProvider="true"/>
        <EditTextPreference
            app:key="threads"
            app:title="@string/pref_threads_title"
            app:summary="@string/pref_threads_summary"
            app:defaultValue="4"
            app:useSimpleSummaryProvider="true"/>
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/pref_cat_ollama">
        <EditTextPreference
            app:key="base_url"
            app:title="@string/pref_base_url_title"
            app:summary="@string/pref_base_url_summary"
            app:defaultValue="http://10.0.2.2:11434"
            app:useSimpleSummaryProvider="true"/>
        <EditTextPreference
            app:key="model"
            app:title="@string/pref_model_title"
            app:summary="@string/pref_model_summary"
            app:defaultValue="dimavz/whisper-tiny"
            app:useSimpleSummaryProvider="true"/>
        <EditTextPreference
            app:key="prompt"
            app:title="@string/pref_prompt_title"
            app:summary="@string/pref_prompt_summary"
            app:defaultValue="Transcribe the audio."
            app:useSimpleSummaryProvider="true"/>
    </PreferenceCategory>
</PreferenceScreen>
